FIX console overflow and button size

--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ body {
   background-color: #fff;
   font-family: sans-serif;
   margin: 0;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .farSide {
@@ -23,7 +23,7 @@ button {
   padding: 10px;
   border-radius: 4px;
   border: 1px solid #ddd;
-  font-size: large;
+  /* font-size: smaller; */
   background-color: #eee;
   color: #000;
 }
@@ -149,11 +149,12 @@ pre.content {
   border-color: #ddd;
   border-width: 5px;
   border-style: solid;
-  min-height: 100%;
-  min-width: 98%;
+  /* min-height: 100%; */
+  max-height: 10%;
   margin: 0;
   padding: 1%;
   overflow-y: scroll;
+  margin-bottom: 5%;
 }
 #console-tr {
   transition: height 300ms;
@@ -176,21 +177,9 @@ button {
   margin: 1px 5px;
 }
 
-/* Sprited icons. */
-.icon21 {
-  height: 21px;
-  width: 21px;
-  background-image: url(icons.png);
-}
-.trash {
-  background-position: 0px 0px;
-}
-.link {
-  background-position: -21px 0px;
-}
-.run {
-  background-position: -42px 0px;
-}
+
+/* .fa-stack { font-size: 0.7em; } */
+i { vertical-align: middle; }
 
 .arrow {
   border: solid black;
